tests/neg-macros/macro-class-not-found-2/Bar.scala
import scala.quoted.*

object Bar {
  Foo.myMacro() // error
}
